change the heading

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <a href="index.html">Gundam</a>
     <a href="portfolio/portfolio.html">peter zheng</a>
-    <h1>Everything is Awesome!!</h1>
+    <h1>THis is peter's home page!</h1>
 	<p><img src="images/img_0569.jpg" class= "bottom"height="250"><p>
 	<p> My name is peter. I like rice. 
 	<h2> RICE IS LIFE</h2>
