--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -15,9 +15,9 @@
 		
 		<a href="https://scratch.mit.edu/projects/119772194/"><img src="images/piano.png"height="150"></a>
 		<P> this showed my project where i made a playable piano</p>
-		<a href="https://scratch.mit.edu/projects/118948519/"><img src="images/fish.png"height="150"></a>
+		<a href="https://scratch.mit.edu/projects/118948519/"><img src="images/fish.PNG"height="150"></a>
 		<p> This project showed my flying fish</p>
-		<a href="https://repl.it/DcqG/9"><img src="images/Capture.png"height="150"></a>
+		<a href="https://repl.it/DcqG/9"><img src="images/Capture.PNG"height="150"></a>
 		<a href="https://imgur.com/1DnAxzN">Flow chart click here</a>
 		<p> This project showed how we programed using python creating a procedure program for our chemisty lab</p>
 		
