--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="index.html">Gundam</a>
     <a href="portfolio/portfolio.html">peter zheng</a>
     <h1>THis is peter's home page!</h1>
-	<p><img src="images/img_0569.jpg" class= "bottom"height="250"><p>
+	<p><img src="images/IMG_0569.JPG" class= "bottom"height="250"><p>
 	<p> My name is peter. I like rice. 
 	<h2> RICE IS LIFE</h2>
 	<a href="backlog/backlog.xls" target="_backlog">Backlog file</a>
