--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -20,7 +20,8 @@
 		<a href="https://repl.it/DcqG/9"><img src="images/Capture.PNG"height="150"></a>
 		<a href="https://imgur.com/1DnAxzN">Flow chart click here</a>
 		<p> This project showed how we programed using python creating a procedure program for our chemisty lab</p>
-		
+		<a href ="https://repl.it/Dwqn/44"><img src = "Capture1.PNG"height="150"></a>
+		<p> This project, we made a app using python to show what we learn in class, and the app that we made is Game of Life</p>
   
   
   
