--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -22,7 +22,7 @@
 		<p> This project showed how we programed using python creating a procedure program for our chemisty lab</p>
 		<a href="https://repl.it/Dwqn/44"><img src="images/Python.PNG"height="150"></a>
 		<p> This project, we made a app using python to show what we learn in class, and the app that we made is Game of Life</p>
-		<a href="Project/3.2.7 Project.zip" target="_blank"><img src="images/Graph.PNG"></a>
+		<a href="Project/3.2.7.zip" target="_Project"><img src="images/Graph.PNG"></a>
 		<p> For this project, we created a scatter plot showing the difference in city of there crime rate and Income rate, to see if income have a relationship with crime. If the income is higher, would the crime rate be lower?</p>
   
   
