--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -24,7 +24,8 @@
 		<p> This project, we made a app using python to show what we learn in class, and the app that we made is Game of Life</p>
 		<a href="Project/3.2.7.zip" target="_Project"><img src="images/Graph.PNG"></a>
 		<p> For this project, we created a scatter plot showing the difference in city of there crime rate and Income rate, to see if income have a relationship with crime. If the income is higher, would the crime rate be lower?</p>
-  
+		<a href="Project/4.2.3.zip" target="_Project"><img src="images/netlogo.PNG"></a>
+    <p> For this project, we create a simulation showing what would happen if a ruler is feared or to generous. </p>
   
   
   
